[v1_SPrint_3] - fix : corrige slogan -> site